adding Github link

--- a/Assn2_Shivanshu_Tiwari_24-14-08.ipynb
+++ b/Assn2_Shivanshu_Tiwari_24-14-08.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "## Assignment 2 (Data Science Tools and Techniqes, AM609)\n",
-    "## Reg. No: 24-14-16\n",
-    "## Name: Chandan Maity\n",
+    "## Reg. No: 24-14-08\n",
+    "## Name: Shivanshu Tiwari\n",
     "## Course: M.Tech Modelling & Simulation"
    ]
   },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "b3428bd9-8f4b-4d60-b2de-46dc79757d97",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "890be485-9414-4aa6-a8e6-373efd670736",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "73bce096-23da-4442-91cc-23e2f788edf9",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "id": "0c1eee18-06bb-4b52-8a60-df213de8cdbb",
    "metadata": {},
    "outputs": [
@@ -317,56 +317,56 @@
      "text": [
       "\n",
       "Data Matrix:\n",
-      "[[ 0.37345545  0.42735162  0.59664014  1.02792155  3.35560869]\n",
-      " [ 0.31549176  0.72285504 24.5421748   3.67114331  0.45567388]\n",
-      " [ 1.90287704  1.17193531  1.00245654  1.9047736   0.48183805]\n",
-      " [ 1.67460926  1.59229386  0.65357928  8.07777693  0.57973248]\n",
-      " [ 0.44447277  0.40383535  0.98490949  9.33395673  0.25054442]\n",
-      " [ 0.64396755  1.02249669  2.74003256  5.66175294  1.9406102 ]\n",
-      " [ 5.40689302  0.84375236 12.71398607  0.33749698  0.6996163 ]\n",
-      " [ 9.25769712  2.71382823  2.39570534  1.65165788  0.96990477]\n",
-      " [ 1.31576072  0.82329253  0.32231087  0.13267433  0.6461229 ]\n",
-      " [ 0.38755208  0.67141177  3.96774712  2.50208841  1.45757005]\n",
-      " [ 5.41509721  0.82396387  0.96239386  1.63923164  0.22089032]\n",
-      " [ 4.40556674  2.21382615  1.18650045  0.9288702   0.93660654]\n",
-      " [10.93491663  0.9513993  10.07913604  0.94319831  0.6154226 ]\n",
-      " [ 0.45545356  2.76633863  1.75399509  0.61382956  4.48915925]\n",
-      " [ 0.81486386  1.20089799  2.37812789  0.17708924  0.21203494]\n",
-      " [ 2.43554138  0.34262375  0.52411235  0.36005366  0.41245628]\n",
-      " [ 0.90224537  1.3943836   0.2180593   0.84150341  0.52773179]\n",
-      " [ 1.70756742  0.56084662  0.51600245  0.22694706  1.91189834]\n",
-      " [ 1.56043376  1.0602104   2.27925073  1.29923292  0.61126497]\n",
-      " [ 0.97873407  0.62174442  1.86248783  0.15745652  1.53493065]\n",
-      " [ 2.57796892  0.36220761  0.56314422  0.58092522  4.83741314]\n",
-      " [ 1.52179538  3.58433391  8.41522368  0.26961658  1.89717876]\n",
-      " [ 2.26831511  3.01221144  1.22273134  1.0055742   0.58033244]\n",
-      " [ 2.47452291  0.32103183  0.72605365  0.4419209   0.56294326]\n",
-      " [ 0.85700385  1.62654989  1.66076868  0.75752273  1.94963552]\n",
-      " [ 1.99462255  2.76049559  1.03075108  0.26322865  0.64286677]\n",
-      " [ 0.61030008  1.00252715  0.50416559  0.47776923  1.95961849]\n",
-      " [ 0.95601063  1.30647096  1.80704985  0.86426427  5.54142735]\n",
-      " [ 0.76553935  0.14435044  1.02196632  1.33010887  2.00096417]\n",
-      " [ 4.95351847  3.62130598  2.77331421  0.43353773  3.13326764]\n",
-      " [ 1.33521134  1.66879761  0.69167789  0.69413679  0.4048821 ]\n",
-      " [ 4.54509914  0.63702275  1.56311719  4.96378989  0.23690559]\n",
-      " [ 2.51564751  0.24067103  0.18092149  1.87755086  1.10676054]\n",
-      " [ 2.18959984  1.64846134  3.51333962  7.4972764   0.58337804]\n",
-      " [ 0.80011839  1.01896557  1.05258694  0.38703161  2.45504048]\n",
-      " [ 0.48583475  0.71676958  0.98642814  4.01152099  0.12472751]\n",
-      " [ 0.16514103  1.23318502  0.82202813  1.97314257  0.18927353]\n",
-      " [16.69597551  2.81557052  4.21455341  0.40105752  0.82298065]\n",
-      " [ 0.2447528   0.08030438  0.83515604  0.39527474  0.99323252]\n",
-      " [ 0.1676134   2.24699819  0.36669589  0.23386521  1.50837867]\n",
-      " [ 1.67318638  2.54051101  1.56490761  0.2927678   4.36641376]\n",
-      " [ 0.54632194  0.15394346  1.17091687  0.80364713  1.96033083]\n",
-      " [ 0.63314124  0.47338804  0.90293561  0.29385714  0.80505483]\n",
-      " [ 1.13978397  1.54283984  0.4763843   0.71660928  0.63610886]\n",
-      " [10.38899628  0.66059252  0.47033624  0.54002073  0.58503965]\n",
-      " [ 2.81000541  0.79954199  3.29149112  0.44187698  3.14429233]\n",
-      " [ 0.06286608  4.12029273  0.4887042   0.55279361  1.15474546]\n",
-      " [ 0.35249799  0.81602973  0.62730038  0.98229097  6.94381929]\n",
-      " [ 1.04082056  0.1638058   2.02197379  1.10775302  2.4031303 ]\n",
-      " [ 2.11621241 11.98265099  0.24003418  0.91299183  1.37571588]]\n"
+      "[[ 0.30821572  1.01621987  2.83291158  0.18724462  1.53354502]\n",
+      " [ 1.73789768  4.41272098  1.17405259  0.47835625  4.24631751]\n",
+      " [ 0.49830452  2.42672729  4.80297841  0.95685148  0.797241  ]\n",
+      " [ 3.74111831  2.5554051   1.98735072  3.97094106  0.46879157]\n",
+      " [ 0.3130524   0.28646629  0.81529812  4.11623036  0.73543727]\n",
+      " [ 0.17390187  2.52377631  3.83716279  0.92231417  0.46344572]\n",
+      " [ 8.2755551   1.10960303  1.98000223  1.08081515  0.86845996]\n",
+      " [ 1.94407287  1.09038315  0.17974173  0.40026281  1.20331456]\n",
+      " [ 1.28015552  0.59112946  1.15840745  0.38921403  0.57396869]\n",
+      " [ 0.82174004  0.67838764  1.3076609   0.8972268   3.95078032]\n",
+      " [ 0.64761217  0.27338757  0.28459897  0.68420863  2.51054574]\n",
+      " [ 0.77979723  0.64650301  1.66884361  0.36483848  1.42389901]\n",
+      " [ 0.29570433  1.33687773  0.15506493  0.3666508   1.24540253]\n",
+      " [ 2.88197227  0.47871411  1.01376095  1.02542426  0.98638323]\n",
+      " [ 1.37276512  3.21179731  1.85881772  5.00256029  0.8719632 ]\n",
+      " [ 0.37034515  0.96609004  0.82625735  1.09617276  1.81856319]\n",
+      " [ 0.70750007  1.58785661  0.22576372  1.82869516  1.14201509]\n",
+      " [ 2.36301579  0.47178047  0.15766113  0.64892574  1.31339778]\n",
+      " [ 1.13758752  1.02475987  0.20499825  1.00501153  0.45760103]\n",
+      " [ 1.33442367  0.99213383  0.40903398  3.72449353  0.18271666]\n",
+      " [16.84575582  1.68486526  0.30581764  1.21225173  1.355364  ]\n",
+      " [ 0.94322663  0.17267363  1.02293277  0.44172088  1.87141695]\n",
+      " [ 6.10724419  0.33556617  0.74197809  0.54550331  1.11449851]\n",
+      " [ 2.41231997  0.74522143  2.22546569  0.17541181  2.65710844]\n",
+      " [ 1.63040422  0.60241271  0.95372708  0.5857199   1.37025692]\n",
+      " [ 0.24966283  0.24893666  3.15754559  1.66657798  0.24248869]\n",
+      " [ 0.5528158   0.09629015  1.52811471  1.54840379  0.42697045]\n",
+      " [ 1.45086802  1.3617722   0.9626909   0.80410656  0.43653602]\n",
+      " [ 0.82703605  3.11607842  1.81581868  0.79181621  0.69518474]\n",
+      " [ 1.66734395  2.38495873  1.31377449  3.86884085  2.37193978]\n",
+      " [ 0.12763047  0.68730499  1.21254365  0.39743334  0.69626647]\n",
+      " [ 5.22980041  1.0962433   2.29246967  4.32866809  2.16299411]\n",
+      " [ 5.74737503  0.49835053  7.85068538  2.4395605   1.84594723]\n",
+      " [ 4.40073262  0.70513591  0.93765297  0.83250652  0.4660805 ]\n",
+      " [ 0.57127738  3.75883244  2.0401409   0.53706625  2.76992451]\n",
+      " [ 1.78522483  0.47394534  0.11138483  2.02757173  1.82435161]\n",
+      " [ 2.0555711   1.52041625  1.22534971  1.41248161  0.35926856]\n",
+      " [ 1.04896762  0.75361984  3.40898902  9.67016216  0.84209293]\n",
+      " [ 1.43793916  0.12516433  4.24635562  1.2785036   0.22440536]\n",
+      " [ 1.39443177  1.54309527  0.56321782  1.17963062  0.93600052]\n",
+      " [ 0.15141217  0.71358772  0.28484168  0.46380658  0.67834955]\n",
+      " [ 2.00582685  0.27123303  2.73845738  1.14739042  0.55935495]\n",
+      " [ 1.31033173  1.86417918  0.74271107  0.73519881  0.12878184]\n",
+      " [ 1.33559986  0.48531903  0.44244566  7.26953298  0.4224699 ]\n",
+      " [ 0.28980874  1.17952749  1.66241532  2.19722134  2.79979339]\n",
+      " [ 0.75624075  1.07666894  0.24778948  1.16587708  2.57286808]\n",
+      " [ 1.54964026  1.30681793  1.41871096  0.6502214   0.18392583]\n",
+      " [ 3.78107722  1.62309349  0.57877514  1.33174867  0.3976255 ]\n",
+      " [ 3.71987144  0.64129393  0.73326088  0.35515006  1.58529947]\n",
+      " [ 1.50416612  1.32120707  1.23752039  1.33642274  1.4721576 ]]\n"
      ]
     }
    ],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "0552862d-d074-48c1-b5e2-69d6d37629c0",
    "metadata": {},
    "outputs": [
@@ -411,8 +411,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean vector: [2.4044324  1.51262229 2.33772532 1.53984757 1.54430952]\n",
-      "Standard deviation vector: [3.18823558 1.79885693 3.97756557 2.07994244 1.49917009]\n"
+      "Mean vector: [2.07748681 1.20149062 1.49767901 1.63085891 1.24527023]\n",
+      "Standard deviation vector: [2.70876367 0.95475997 1.42313351 1.83380569 0.94557703]\n"
      ]
     }
    ],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "id": "54dc35ab-2b36-4557-8d47-762ed966f903",
    "metadata": {},
    "outputs": [
@@ -451,8 +451,8 @@
      "text": [
       "\n",
       "Mean of normalized columns:\n",
-      " [-1.49602553e-16  2.30926389e-16 -4.44089210e-18  1.29896094e-16\n",
-      " -8.88178420e-18]\n",
+      " [-2.38697950e-17 -2.22599716e-16 -1.78190795e-16  1.25455202e-16\n",
+      "  2.95874436e-16]\n",
       "\n",
       "Standard deviation of normalized columns:\n",
       " [1. 1. 1. 1. 1.]\n"
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "51cb76ba-61d8-4ab0-b7e3-b013e4fac882",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "21e56cb8-0565-444f-bc45-dfc4973f1255",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "id": "6b9731e0-c284-42af-8db1-fafe2527ef36",
    "metadata": {},
    "outputs": [
@@ -631,14 +631,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9af743a-9551-4529-8851-070907a896de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "e862aa02-641d-4c72-acf8-f26076b8071f",
    "metadata": {},
@@ -656,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "id": "c936ebcc-25d6-40bf-958e-75000424a5d1",
    "metadata": {},
    "outputs": [
@@ -665,14 +657,33 @@
      "output_type": "stream",
      "text": [
       "Solution to the linear system using np.linalg.solve:\n",
-      " [1.00000064 0.99999871 1.00000078 0.99999993 0.99999989 1.00000005\n",
-      " 0.99999999 1.         1.         1.        ]\n"
+      " [1.10619363 0.6855576  1.38336806 0.74140687 1.10853749 0.96996722\n",
+      " 1.00562989 0.99928089 1.00006163 0.99999661 1.00000011 1.        ]\n"
      ]
     }
    ],
    "source": [
     "x_solve_method = np.linalg.solve(vander, b)\n",
     "print(\"Solution to the linear system using np.linalg.solve:\\n\", x_solve_method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4e32fd14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://github.com/imshivanshutiwari/Shivanshu_Tiwari_24-14-08/blob/main/Assn2_Shivanshu_Tiwari_24-14-08.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Github Link\n",
+    "print(\"https://github.com/imshivanshutiwari/Shivanshu_Tiwari_24-14-08/blob/main/Assn2_Shivanshu_Tiwari_24-14-08.ipynb\")"
    ]
   }
  ],
@@ -692,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
